# hxbit.py

./: .gitignore  README.md  hxs.hexpat  pyproject.toml
hxbit/: __main__.py  core.py  gui.py
hxbit/shims/: __init__.py  deadcells.py
hxbit/types/: __init__.py
scripts/: gen_shims.py
tests/: test_basic.py
